# ChangeLog for www-client/netsurf
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 May 2011; Michael Weber <xmw@gentoo.org> netsurf-2.7.ebuild:
  net-libs/hubbub is RDEP, too

  03 May 2011; Michael Weber <xmw@gentoo.org> netsurf-2.7.ebuild:
  fixed SRC_URI

  03 May 2011; Michael Weber <xmw@gentoo.org> netsurf-2.7.ebuild:
  Initial import, bug 347471, thanks to inciner@gmail.com for the initial
  ebuild
