@@ -1,14 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST netsurf-2.7-src.tar.gz 2446099 RMD160 007cf1c8754d61296ad367008c1ed09ed45be50c SHA1 a3e2816686fc2e3d93cdc77271dd4c33dc0e5300 SHA256 54f872cf948f97b768dfd062e44f148bf263483660f7cb604ec07c835e4b0c07
-EBUILD netsurf-2.7.ebuild 3012 RMD160 418a38a4571a9868ad9b2df5bff82c2181531c4c SHA1 4b4efd60bb1469b94068a7b9a4390408345afe1d SHA256 881214bd895fd11c5eb85aebc157105a578d01873c42dbae5eaecf9eff9bd8cb
-MISC ChangeLog 450 RMD160 b2d48bc8ebd19ed5d9f885c298c94db6ddf047b1 SHA1 01e151d307c79e52b5b3cb63f8bf930fe2bba866 SHA256 b2eb4128febcc65ee6172ec8c4eb9c73dc046a0640471231b374c352ad384e24
+DIST netsurf-2.8_p13896.tar.gz 5292691 RMD160 433830bf6a680ed22e9fbdf9b19175ae1e9961e3 SHA1 be6e1939b505838e03c05d526486587d97bae30d SHA256 9caa80fdacc6b409d0619867a3d1a9f0600d868553bc75031e6bc9ecb5926cb8
+EBUILD netsurf-2.8_p13896.ebuild 3188 RMD160 4f1bc58be2cbd8c18d256ed3ec34a88fe3b386fc SHA1 5b4b65b86c40fe16f42f83459b3c1d761868f33b SHA256 90e6eb66e1d305d2caf497678a0e730895389a512bd44684f9c65a3ddd07c711
+MISC ChangeLog 598 RMD160 a870d407c5b4dbba89950f85de3d00e1b27ea0ac SHA1 293084849781022b2a5ccc0fe9c24ca7f16f7388 SHA256 59d9f67dc0c28b843e38477adda65dcdd9a25064a926a6d884f704a94d108a00
 MISC metadata.xml 762 RMD160 95f45ec4c54f381261156bb07c6010677e954d30 SHA1 aceb26cd54204b011409361456e6f7a273598488 SHA256 1a6414246cf7295476d133fdab06395aed4a01f741a89ea27be533a4bd0bd313
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk3AiBwACgkQknrdDGLu8JDJ5QD/ZJtv28ZDb6KUZEh4cCXuV7CL
-eOomqjaMNx/dB5RoIpcA/0sRFNCw+GYPV2cqq+ekhc6z4bVKhAoJSERnGJbH1WEm
-=enkn
+iF4EAREIAAYFAk+ctSQACgkQknrdDGLu8JD/UAD/bDvANenL5/uI85PDRehTrf3E
+Zl8Kxt3OlJi97Gqr6bQA/3lRv4/y7BbbZyvIekjOQT25opr0R4kmxai/fVwKQoZP
+=wrP6
 -----END PGP SIGNATURE-----
