@@ -1,6 +1,12 @@
 # ChangeLog for www-client/netsurf
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*netsurf-2.8_p13896 (29 Apr 2012)
+
+  29 Apr 2012; Michael Weber <xmw@gentoo.org> -netsurf-2.7.ebuild,
+  +netsurf-2.8_p13896.ebuild:
+  Version bump
 
   03 May 2011; Michael Weber <xmw@gentoo.org> netsurf-2.7.ebuild:
   net-libs/hubbub is RDEP, too
